--- a/legal/cookies.html
+++ b/legal/cookies.html
@@ -15,17 +15,17 @@
     <link rel="apple-touch-icon" href="/images/amym-icon.ico">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-web-app-title" content="Amor Y Algo Más | Términos Y Condiciones">
-    <title>Amor Y Algo Más | Términos Y Condiciones</title>
+    <meta name="apple-web-app-title" content="Amor Y Algo Más | Política De Cookies">
+    <title>Amor Y Algo Más | Política De Cookies</title>
     <meta name="description" content="Amor y algo más es un espacio social dónde encontrarás artículos, escritos, noticias y más." />
     <meta property="fb:app_id" content="807980679724387">
     <meta property="fb:pages" content="107292547459829" />
-    <link rel="canonical" href="https://amoryalgomas.com/legal/terms.html" />
+    <link rel="canonical" href="https://amoryalgomas.com/legal/cookies.html" />
     <meta property="og:locale" content="es" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Amor Y Algo Más | Términos Y Condiciones" />
+    <meta property="og:title" content="Amor Y Algo Más | Politica De Cookies" />
     <meta property="og:description" content="Amor y algo más es un espacio social dónde encontrarás artículos, escritos, noticias y más." />
-    <meta property="og:url" content="https://amoryalgomas.com/legal/terms.html" />
+    <meta property="og:url" content="https://amoryalgomas.com/legal/privacy.html" />
     <meta property="og:image" content="https://amoryalgomas.com/images/headeramoryalgomas.jpg" />
     <meta property="og:image:secure_url" content="https://amoryalgomas.com/images/headeramoryalgomas.jpg" />
     <meta property="og:image:width" content="1280" />
@@ -35,7 +35,7 @@
     <meta property="twitter:creator" content="@amoryalgomaspag">
     <meta property="twitter:creator:id" content="1224143030300573697">
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:title" content="Amor Y Algo Más | Términos Y Condiciones">
+    <meta property="twitter:title" content="Amor Y Algo Más | Politica De Cookies">
     <meta name="twitter:description" content="Amor y algo más es un espacio social dónde encontrarás artículos, escritos, noticias y más." />
     <meta property="twitter:image:src" content="https://amoryalgomas.com/images/headeramoryalgomas.jpg">
     <meta property="twitter:image:width" content="1280">
@@ -103,37 +103,85 @@
 
         <section class="site-section py-lg">
             <div class="container">
-
                 <div class="post-content-body">
-
                     <h2 style="text-align: center;">
-                        <strong>Términos y Condiciones</strong>
+                        <strong>Política De Cookies</strong>
                     </h2>
                     <p style="text-align: center;">Última Actualización: Enero 12, 2020</p>
-                    <p>&nbsp;</p>
-                    <h2 style="text-align: center;">
-                        <strong>INFORMACIÓN RELEVANTE</strong></h2>
-                    <p>Es requisito necesario para la adquisición de los productos que se ofrecen en este sitio, que lea y acepte los siguientes Términos y Condiciones que a continuación se redactan. El uso de nuestros servicios así como la compra de nuestros productos implicará que usted ha leído y aceptado los Términos y Condiciones de Uso en el presente documento. Todas los productos &nbsp;que son ofrecidos por nuestro sitio web pudieran ser creadas, cobradas, enviadas o presentadas por una página web tercera y en tal caso estarían sujetas a sus propios Términos y Condiciones. En algunos casos, para adquirir un producto, será necesario el registro por parte del usuario, con ingreso de datos personales fidedignos y definición de una contraseña.</p>
-                    <p>El usuario puede elegir y cambiar la clave para su acceso de administración de la cuenta en cualquier momento, en caso de que se haya registrado y que sea necesario para la compra de alguno de nuestros productos. https://amoryalgomaas.com no asume la responsabilidad en caso de que entregue dicha clave a terceros.</p>
-                    <p>Todas las compras y transacciones que se lleven a cabo por medio de este sitio web, están sujetas a un proceso de confirmación y verificación, el cual podría incluir la verificación del stock y disponibilidad de producto, validación de la forma de pago, validación de la factura (en caso de existir) y el cumplimiento de las condiciones requeridas por el medio de pago seleccionado. En algunos casos puede que se requiera una verificación por medio de correo electrónico.</p>
-                    <p>Los precios de los productos ofrecidos en esta Tienda Online es válido solamente en las compras realizadas en este sitio web.</p>
-                    <p><strong>LICENCIA</strong></p>
-                    <p>Amor y Algo Más&nbsp; a través de su sitio web concede una licencia para que los usuarios utilicen&nbsp; los productos que son vendidos en este sitio web de acuerdo a los Términos y Condiciones que se describen en este documento.</p>
-                    <p><strong>USO NO AUTORIZADO</strong></p>
-                    <p>En caso de que aplique (para venta de software, templetes, u otro producto de diseño y programación) usted no puede colocar uno de nuestros productos, modificado o sin modificar, en un CD, sitio web o ningún otro medio y ofrecerlos para la redistribución o la reventa de ningún tipo.</p>
-                    <p><strong>PROPIEDAD</strong></p>
-                    <p>Usted no puede declarar propiedad intelectual o exclusiva a ninguno de nuestros productos, modificado o sin modificar. Todos los productos son propiedad &nbsp;de los proveedores del contenido. En caso de que no se especifique lo contrario, nuestros productos se proporcionan&nbsp; sin ningún tipo de garantía, expresa o implícita. En ningún esta compañía será &nbsp;responsables de ningún daño incluyendo, pero no limitado a, daños directos, indirectos, especiales, fortuitos o consecuentes u otras pérdidas resultantes del uso o de la imposibilidad de utilizar nuestros productos.</p>
-                    <p><strong>POLÍTICA DE REEMBOLSO Y GARANTÍA</strong></p>
-                    <p>En el caso de productos que sean&nbsp; mercancías irrevocables no-tangibles, no realizamos reembolsos después de que se envíe el producto, usted tiene la responsabilidad de entender antes de comprarlo. &nbsp;Le pedimos que lea cuidadosamente antes de comprarlo. Hacemos solamente excepciones con esta regla cuando la descripción no se ajusta al producto. Hay algunos productos que pudieran tener garantía y posibilidad de reembolso pero este será especificado al comprar el producto. En tales casos la garantía solo cubrirá fallas de fábrica y sólo se hará efectiva cuando el producto se haya usado correctamente. La garantía no cubre averías o daños ocasionados por uso indebido. Los términos de la garantía están asociados a fallas de fabricación y funcionamiento en condiciones normales de los productos y sólo se harán efectivos estos términos si el equipo ha sido usado correctamente. Esto incluye:</p>
-                    <p>– De acuerdo a las especificaciones técnicas indicadas para cada producto.<br>– En condiciones ambientales acorde con las especificaciones indicadas por el fabricante.<br>– En uso específico para la función con que fue diseñado de fábrica.
-                        <br>– En condiciones de operación eléctricas acorde con las especificaciones y tolerancias indicadas.</p>
-                    <p><strong>COMPROBACIÓN ANTIFRAUDE</strong></p>
-                    <p>La compra del cliente puede ser aplazada para la comprobación antifraude. También puede ser suspendida por más tiempo para una investigación más rigurosa, para evitar transacciones fraudulentas.</p>
-                    <p>
-                        <strong>PRIVACIDAD</strong></p>
-                    <p>Este <a href="https://amoryalgomaas.com" target="_blank">sitio web</a> https://amoryalgomaas.com garantiza que la información personal que usted envía cuenta con la seguridad necesaria. Los datos ingresados por usuario o en el caso de requerir una validación de los pedidos no serán entregados a terceros, salvo que deba ser revelada en cumplimiento a una orden judicial o requerimientos legales.</p>
-                    <p>La suscripción a boletines de correos electrónicos publicitarios es voluntaria y podría ser seleccionada al momento de crear su cuenta.</p>
-                    <p>Amor y Algo Más reserva los derechos de cambiar o de modificar estos términos sin previo aviso.</p>
+
+                    <p>This Cookies Policy explains what Cookies are and how We use them. You should read this policy so You can understand what type of cookies We use, or the information We collect using Cookies and how that information is used.</p>
+
+                    <p>Cookies do not typically contain any information that personally identifies a user, but personal information that we store about You may be linked to the information stored in and obtained from Cookies. For further information on how We use, store and keep your personal data secure, see our Privacy Policy.</p>
+
+                    <p>We do not store sensitive personal information, such as mailing addresses, account passwords, etc. in the Cookies We use.</p>
+
+                    <h1>Interpretation and Definitions</h1>
+
+                    <h2>Interpretation</h2>
+
+                    <p>The words of which the initial letter is capitalized have meanings defined under the following conditions.</p>
+
+                    <p>The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.</p>
+
+
+                    <h2>Definitions</h2>
+
+                    <p>For the purposes of this Cookies Policy:</p>
+                    <ul>
+                        <li><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Cookies Policy) refers to Andre LLC, Cra. 19 #10B-44 SAN 687542.</li>
+                        <li><strong>You</strong> means the individual accessing or using the Website, or a company, or any legal entity on behalf of which such individual is accessing or using the Website, as applicable.</li>
+                        <li><strong>Cookies</strong> means small files that are placed on Your computer, mobile device or any other device by a website, containing details of your browsing history on that website among its many uses.</li>
+                        <li><strong>Website</strong> refers to Amor Y Algo Más, accessible from https://amoryalgomamoryalgomas.com.</li>
+                    </ul>
+
+                    <h1>The use of the Cookies</h1>
+                    <h2>Type of Cookies We Use</h2>
+                    <p>Cookies can be "Persistent" or "Session" Cookies. Persistent Cookies remain on your personal computer or mobile device when You go offline, while Session Cookies are deleted as soon as You close your web browser.</p>
+                    <p>We use both session and persistent Cookies for the purposes set out below:</p>
+
+                    <ul>
+                        <li>
+                            <p><strong>Necessary / Essential Cookies</strong>
+                                <p>Type: Session Cookies</p>
+                                <p>Administered by: Us</p>
+                                <p>Purpose: These Cookies are essential to provide You with services available through the Website and to enable You to use some of its features. They help to authenticate users and prevent fraudulent use of user accounts. Without these Cookies, the services that You have asked for cannot be provided, and We only use these Cookies to provide You with those services.</p>
+                        </li>
+                        <li>
+                            <p><strong>Functionality Cookies</strong></p>
+                            <p>Type: Persistent Cookies</p>
+                            <p>Administered by: Us</p>
+                            <p>Purpose: These Cookies allow us to remember choices You make when You use the Website, such as remembering your login details or language preference. The purpose of these Cookies is to provide You with a more personal experience and to avoid You having to re-enter your preferences every time You use the Website.</p>
+                        </li>
+                    </ul>
+
+                    <h2>Your Choices Regarding Cookies</h2>
+                    <p>If You prefer to avoid the use of Cookies on the Website, first You must disable the use of Cookies in your browser and then delete the Cookies saved in your browser associated with this website. You may use this option for preventing the use of Cookies at any time.</p>
+                    <p>If You do not accept Our Cookies, You may experience some inconvenience in your use of the Website and some features may not function properly.</p>
+                    <p>If You'd like to delete Cookies or instruct your web browser to delete or refuse Cookies, please visit the help pages of your web browser.</p>
+
+                    <ul>
+                        <li>For the Chrome web browser, please visit this page from Google: https://support.google.com/accounts/answer/32050</li>
+                        <li>For the Internet Explorer web browser, please visit this page from Microsoft: http://support.microsoft.com/kb/278835</li>
+                        <li>For the Firefox web browser, please visit this page from Mozilla: https://support.mozilla.org/en-US/kb/delete-cookies-remove-info-websites-stored</li>
+                        <li>For the Safari web browser, please visit this page from Apple: https://support.apple.com/guide/safari/manage-cookies-and-website-data-sfri11471/mac</li>
+                    </ul>
+
+                    <p>For any other web browser, please visit your web browser's official web pages.</p>
+
+                    <h2>Más Información Sobre Las Cookies</h2>
+                    <p>You can learn more about Cookies at the following third-party websites:</p>
+
+                    <ul>
+                        <li>Network Advertising Initiative: http://www.networkadvertising.org/</li>
+                    </ul>
+
+                    <h2>Contacto</h2>
+                    <p>If you have any questions about this Cookies Policy, You can contact us:</p>
+
+                    <ul>
+                        <li>Por email: amoryalgomaspage@gmail.com</li>
+                        <li>Por número de Teléfono: +573013507441</li>
+                    </ul>
 
                 </div>
             </div>
