--- a/about-me.html
+++ b/about-me.html
@@ -75,7 +75,8 @@
     <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-
+    
+    <meta name="theme-color" content="#6610f2">
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="manifest" href="manifest.json">
