--- a/index.html
+++ b/index.html
@@ -524,5 +524,12 @@
         });
     </script>
     <!-- End Cookie Consent -->
-
+<script>
+      if('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/sw.js')
+          .then(function() {
+                console.log('Service Worker Registered');
+          });
+      }
+    </script>
 </body></html>
