--- a/index.html
+++ b/index.html
@@ -524,12 +524,6 @@
         });
     </script>
     <!-- End Cookie Consent -->
-<script>
-      if('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/sw.js')
-          .then(function() {
-                console.log('Service Worker Registered');
-          });
-      }
-    </script>
+<script src="./script.js"></script>
+
 </body></html>
