--- a/offline.html
+++ b/offline.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, height-device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="shortcut icon" href="images/amym-icon.ico" type="image/x-icon">
-    <link rel="icon" href="images/amym-icon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="images/amym-icon.ico">
+    <link rel="shortcut icon" href="/images/icons/ayam-favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/icons/ayam-favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/images/icons/ayam-favicon.ico">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Amor Y Algo Más | Blog</title>
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#6610f2" />
