--- a/about.html
+++ b/about.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <link rel="dns-prefetch" href="//amoryalgomas.com">
     <link rel="dns-prefetch" href="//github.githubassets.com">
@@ -11,19 +9,22 @@
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width-device-width, height-device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="shortcut icon" href="images/amym-icon.ico" type="image/x-icon">
-    <link rel="icon" href="images/amym-icon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="images/amym-icon.ico">
+    <meta name="viewport" content="width=device-width, height-device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="MobileOptimized" content="width">
+    <meta name="HandheldFriendly" content="true">
+    <link rel="shortcut icon" href="/images/icons/ayam-favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/icons/ayam-favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/images/icons/ayam-favicon.ico">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-web-app-title" content="Amor Y Algo Más | Sobre Nosotros">
     <title>Amor Y Algo Más | Info</title>
     <meta name="title" content="Amor Y Algo Más | Sobre Nosotros">
     <meta name="description" content="Amor y algo más es un espacio social dónde encontrarás artículos, escritos, noticias y más." />
     <meta name="keywords" content="blog, artículos, noticias, entretenimiento, memes">
     <meta name="robots" content="index, follow">
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="content-type" content="text/html">
     <meta name="language" content="Spanish">
     <meta name="author" content="https://instagram.com/thianandre">
     <meta property="fb:app_id" content="807980679724387">
@@ -65,6 +66,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-158187435-1');
+
     </script>
     <!-- END Global site tag (gtag.js) - Google Analytics -->
 
@@ -410,6 +412,7 @@
                             Copyright &copy; Andre LLC <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                             <script>
                                 document.write(new Date().getFullYear());
+
                             </script> All Rights Reserved |<a href="https://amoryalgomas.com"> Amor Y Algo Más</a>
                             <!-- END Copyright -->
 
@@ -443,4 +446,7 @@
 
 
     <script src="js/main.js"></script>
-</body></html>
+    <script src="script.js"></script>
+</body>
+
+</html>
