--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width-device-width, height-device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="shortcut icon" href="images/amym-icon.ico" type="image/x-icon">
-    <link rel="icon" href="images/amym-icon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="images/amym-icon.ico">
+    <meta name="viewport" content="width=device-width, height-device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="MobileOptimized" content="width">
+    <meta name="HandheldFriendly" content="true">
+    <link rel="shortcut icon" href="/images/icons/ayam-favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/icons/ayam-favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/images/icons/ayam-favicon.ico">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-web-app-title" content="Amor Y Algo Más | Blog">
     <title>Amor Y Algo Más | Blog</title>
     <meta name="title" content="Amor Y Algo Más | Blog">
@@ -58,6 +60,7 @@
             "alternateName": "Amor Y Algo Más | Blog",
             "url": "https://amoryalgomas.com"
         }
+
     </script>
     <!-- Structured data for website -->
 
@@ -76,6 +79,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-158187435-1');
+
     </script>
     <!-- END Global site tag (gtag.js) - Google Analytics -->
 
@@ -477,6 +481,7 @@
                             Copyright &copy; Andre LLC <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                             <script>
                                 document.write(new Date().getFullYear());
+
                             </script> All Rights Reserved |<a href="https://amoryalgomas.com"> Amor Y Algo Más</a>
                             <!-- END Copyright -->
 
@@ -509,6 +514,7 @@
     <script src="js/jquery.stellar.min.js"></script>
 
     <script src="js/main.js"></script>
+    <script src="script.js"></script>
 
     <!-- Cookie Consent -->
     <script src="js/cookie-consent.js"></script>
@@ -522,8 +528,9 @@
                 "website_name": "Amor Y Algo Más"
             });
         });
+
     </script>
     <!-- End Cookie Consent -->
-<script src="./script.js"></script>
 
-</body></html>
+</body>
+</html>
