--- a/legal/terms.html
+++ b/legal/terms.html
@@ -9,12 +9,14 @@
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width-device-width, height-device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="shortcut icon" href="/images/amym-icon.ico" type="image/x-icon">
-    <link rel="icon" href="/images/amym-icon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="/images/amym-icon.ico">
+    <meta name="viewport" content="width=device-width, height-device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="MobileOptimized" content="width">
+    <meta name="HandheldFriendly" content="true">
+    <link rel="shortcut icon" href="/images/icons/ayam-favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/icons/ayam-favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/images/icons/ayam-favicon.ico">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-web-app-title" content="Amor Y Algo Más | Términos Y Condiciones">
     <title>Amor Y Algo Más | Términos Y Condiciones</title>
     <meta name="description" content="Amor y algo más es un espacio social dónde encontrarás artículos, escritos, noticias y más." />
@@ -52,6 +54,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-158187435-1');
+
     </script>
     <!-- END Global site tag (gtag.js) - Google Analytics -->
 
@@ -150,6 +153,7 @@
                         Copyright &copy; Andre LLC <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                         <script>
                             document.write(new Date().getFullYear());
+
                         </script> All Rights Reserved |<a href="https://amoryalgomas.com"> Amor Y Algo Más</a>
                         <!-- END Copyright -->
 
@@ -177,6 +181,9 @@
 
 
     <script src="/js/main.js"></script>
+    <script src="/script.js"></script>
 
 
-</body></html>
+</body>
+
+</html>
