--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <link rel="dns-prefetch" href="//amoryalgomas.com">
@@ -9,7 +10,7 @@
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, height-device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="MobileOptimized" content="width">
     <meta name="HandheldFriendly" content="true">
     <link rel="shortcut icon" href="/images/icons/ayam-favicon.ico" type="image/x-icon">
@@ -500,8 +501,8 @@
     </div>
 
     <!-- loader -->
-    <div id="loader" class="show fullscreen"><svg class="circular" width="50px" height="50px">
-            <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#666666" />
+    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+            <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
             <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#993333" /></svg></div>
     <!-- END loader -->
 
@@ -533,4 +534,5 @@
     <!-- End Cookie Consent -->
 
 </body>
+
 </html>
