--- a/about-me.html
+++ b/about-me.html
@@ -431,9 +431,9 @@
     </div>
 
     <!-- loader -->
-    <div id="loader" class="show fullscreen"><svg class="circular" width="50px" height="50px">
+    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
             <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#993333" /></svg></div>
+            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#993333" /></svg></div>
     <!-- END loader -->
 
     <script src="js/jquery-3.2.1.min.js"></script>
