--- a/offline.html
+++ b/offline.html
@@ -103,6 +103,7 @@
             margin-left: auto;
             margin-right: auto;
         }
+
     </style>
 </head>
 
@@ -120,4 +121,6 @@
             </div>
         </div>
     </main>
-</body></html>
+
+</body>
+</html>
