--- a/categorias/articulos.html
+++ b/categorias/articulos.html
@@ -58,6 +58,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-158187435-1');
+
     </script>
     <!-- END Global site tag (gtag.js) - Google Analytics -->
 
@@ -191,7 +192,7 @@
                                         </span>
                                     </a>
                                 </div>
-                               <!-- END post -->
+                                <!-- END post -->
                                 <div class="post-entry-horzontal">
                                     <a href="https://amoryalgomas.com/categorias/memes/steve/steve-de-minecraft-ha-sido-diagnosticado-con-coronavirus.html">
                                         <div class="image element-animate" data-animate-effect="fadeIn" style="background-image: url(/categorias/memes/steve/images/steve-con-coronavirus.jpg);"></div>
@@ -384,6 +385,7 @@
                             Copyright &copy; Andre LLC <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                             <script>
                                 document.write(new Date().getFullYear());
+
                             </script> All Rights Reserved |<a href="https://amoryalgomas.com"> Amor Y Algo Más</a>
                             <!-- END Copyright -->
 
@@ -402,9 +404,9 @@
     </div>
 
     <!-- loader -->
-    <div id="loader" class="show fullscreen"><svg class="circular" width="50px" height="50px">
+    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
             <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#993333" /></svg></div>
+            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#993333" /></svg></div>
     <!-- END loader -->
 
     <script src="/js/jquery-3.2.1.min.js"></script>
@@ -417,4 +419,7 @@
 
 
     <script src="/js/main.js"></script>
-</body></html>
+    <script src="/script.js"></script>
+</body>
+
+</html>
