--- a/categorias/mujeres.html
+++ b/categorias/mujeres.html
@@ -57,6 +57,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-158187435-1');
+
     </script>
     <!-- END Global site tag (gtag.js) - Google Analytics -->
 
@@ -352,6 +353,7 @@
                             Copyright &copy; Andre LLC <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                             <script>
                                 document.write(new Date().getFullYear());
+
                             </script> All Rights Reserved |<a href="https://amoryalgomas.com"> Amor Y Algo Más</a>
                             <!-- END Copyright -->
 
@@ -370,9 +372,9 @@
     </div>
 
     <!-- loader -->
-    <div id="loader" class="show fullscreen"><svg class="circular" width="50px" height="50px">
+    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
             <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#993333" /></svg></div>
+            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#993333" /></svg></div>
     <!-- END loader -->
 
     <script src="/js/jquery-3.2.1.min.js"></script>
@@ -385,4 +387,7 @@
 
 
     <script src="/js/main.js"></script>
-</body></html>
+    <script src="/script.js"></script>
+</body>
+
+</html>
