--- a/categorias/articulos/mujeres/porque-la-ansiedad-y-la-depresion-afecta-mas-a-las-mujeres.html
+++ b/categorias/articulos/mujeres/porque-la-ansiedad-y-la-depresion-afecta-mas-a-las-mujeres.html
@@ -9,12 +9,14 @@
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width-device-width, height-device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="shortcut icon" href="/images/amym-icon.ico" type="image/x-icon">
-    <link rel="icon" href="/images/amym-icon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="/images/amym-icon.ico">
+    <meta name="viewport" content="width=device-width, height-device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="MobileOptimized" content="width">
+    <meta name="HandheldFriendly" content="true">
+    <link rel="shortcut icon" href="/images/icons/ayam-favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/icons/ayam-favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/images/icons/ayam-favicon.ico">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-web-app-title" content="¿Por Qué La Ansiedad Y La Depresión Afecta Más A Las Mujeres?">
     <title>¿Por Qué La Ansiedad Y La Depresión Afecta Más A Las Mujeres?</title>
     <meta name="description" content="Ansiedad y depresión  son dos trastornos emocionales complejos, que implican también problemas en pensamientos y conductas. Aunque son distintos." />
@@ -57,6 +59,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-158187435-1');
+
     </script>
     <!-- END Global site tag (gtag.js) - Google Analytics -->
 
@@ -326,7 +329,7 @@
                         </a>
                     </div>
                 </div>
-                
+
             </div>
         </section>
         <!-- END section -->
@@ -407,6 +410,7 @@
                             Copyright &copy; Andre LLC <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                             <script>
                                 document.write(new Date().getFullYear());
+
                             </script> All Rights Reserved |<a href="https://amoryalgomas.com"> Amor Y Algo Más</a>
                             <!-- END Copyright -->
 
@@ -425,9 +429,10 @@
     </div>
 
     <!-- loader -->
-    <div id="loader" class="show fullscreen"><svg class="circular" width="50px" height="50px">
+    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
             <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#993333" /></svg></div> <!-- END loader -->
+            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#993333" /></svg></div>
+    <!-- END loader -->
 
     <script src="/js/jquery-3.2.1.min.js"></script>
     <script src="/js/jquery-migrate-3.0.0.js"></script>
@@ -439,4 +444,7 @@
 
 
     <script src="/js/main.js"></script>
-</body></html>
+    <script src="/script.js"></script>
+</body>
+
+</html>
