--- a/offline.html
+++ b/offline.html
@@ -114,10 +114,10 @@
     </header>
     <main class="main">
         <div class="weather-card">
-            <img style="align: center;" src="images/panda-offline.png" width="150" height="250" alt="Image placeholder" class="offline-panda">
+            <img style="align: center;" src="/images/panda-offline.png" width="150" height="250" alt="Image placeholder" class="offline-panda">
             <div>
                 <p style="text-align: center;"> Oops, parece que estás offline.</p>
-                <p style="text-align: center;">Esta app requiere conexión a internet.</p>
+                <p style="text-align: center;">Necesitas una conexión a internet.</p>
             </div>
         </div>
     </main>
