--- a/index.html
+++ b/index.html
@@ -86,18 +86,18 @@
 
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Josefin+Sans:300, 400,700|Inconsolata:400,700">
 
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/css//bootstrap.css">
+    <link rel="stylesheet" href="/css/animate.css">
+    <link rel="stylesheet" href="/css/owl.carousel.min.css">
 
-    <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
-    <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="/fonts/ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="/fonts/fontawesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/fonts/flaticon/font/flaticon.css">
 
     <meta name="theme-color" content="#6610f2">
     <!-- Theme Style -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="manifest" href="/manifest.json">
 
 </head>
 
@@ -479,11 +479,11 @@
                         <p class="small">
 
                             <!-- END Copyright -->
-                            Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                            &copy; <a href="https://amoryalgomas.com">AYAM</a> | All Rights Reserved<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                             <script>
                                 document.write(new Date().getFullYear());
 
-                            </script> All Rights Reserved |<a href="https://amoryalgomas.com"> Amor Y Algo Más</a>
+                            </script>
                             <!-- END Copyright -->
 
                         </p>
