--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="row pt-5">
                     <div class="col-12 text-center">
                         <a class="absolute-toggle d-block d-md-none" data-toggle="collapse" href="#navbarMenu" role="button" aria-expanded="false" aria-controls="navbarMenu"><span class="burger-lines"></span></a>
-                        <h1 class="site-logo"><a href="https://amoryalgomas.com">Amor Y Algo Más</a></h1>
+                        <h1 class="site-logo"><a href="https://amoryalgomas.com">AYAM</a></h1>
                     </div>
                 </div>
             </div>
