--- a/index.html
+++ b/index.html
@@ -479,11 +479,7 @@
                         <p class="small">
 
                             <!-- END Copyright -->
-                            &copy; <a href="https://amoryalgomas.com">AYAM</a> | All Rights Reserved<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                            <script>
-                                document.write(new Date().getFullYear());
-
-                            </script>
+                            &copy; <script>document.write(new Date().getFullYear());</script> <a href="https://amoryalgomas.com">AYAM</a> | All Rights Reserved<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                             <!-- END Copyright -->
 
                         </p>
