--- a/offline.html
+++ b/offline.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" href="/images/icons/ayam-favicon.ico">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Amor Y Algo Más | Blog</title>
+    <title>Offline</title>
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#6610f2" />
     <style>
@@ -114,10 +114,10 @@
     </header>
     <main class="main">
         <div class="weather-card">
-            <img style="align: center;" src="/images/panda-offline.png" width="150" height="250" alt="Image placeholder" class="offline-panda">
+            <img style="align: center;" src="images/panda-offline.png" width="150" height="250" alt="Image placeholder" class="offline-panda">
             <div>
                 <p style="text-align: center;"> Oops, parece que estás offline.</p>
-                <p style="text-align: center;">Necesitas una conexión a internet.</p>
+                <p style="text-align: center;">Esta app requiere conexión a internet.</p>
             </div>
         </div>
     </main>
