--- a/legal/privacy.html
+++ b/legal/privacy.html
@@ -43,21 +43,6 @@
     <meta property="twitter:image:width" content="1280">
     <meta property="twitter:image:height" content="640">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158187435-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-158187435-1');
-
-    </script>
-    <!-- END Global site tag (gtag.js) - Google Analytics -->
-
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300, 400,700|Inconsolata:400,700" rel="stylesheet">
 
     <link rel="stylesheet" href="/css/bootstrap.css">
@@ -397,15 +382,15 @@
 			<circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#993333" /></svg></div>
 	<!-- END loader -->
 
-	<script src="/jsjquery-3.2.1.min.js"></script>
-	<script src="/jsjquery-migrate-3.0.0.js"></script>
-	<script src="/jspopper.min.js"></script>
-	<script src="/jsbootstrap.min.js"></script>
-	<script src="/jsowl.carousel.min.js"></script>
-	<script src="/jsjquery.waypoints.min.js"></script>
-	<script src="/jsjquery.stellar.min.js"></script>
+	<script src="/js/jquery-3.2.1.min.js"></script>
+	<script src="/js/jquery-migrate-3.0.0.js"></script>
+	<script src="/js/popper.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/owl.carousel.min.js"></script>
+	<script src="/js/jquery.waypoints.min.js"></script>
+	<script src="/js/jquery.stellar.min.js"></script>
 
-	<script src="/jsmain.js"></script>
+	<script src="/js/main.js"></script>
 	<script>
 		if ('serviceWorker' in navigator) {
 			navigator.serviceWorker.register('/sw.js')
@@ -416,7 +401,7 @@
 	</script>
 
 	<!-- Cookie Consent -->
-	<script src="/jscookie-consent.js"></script>
+	<script src="/js/cookie-consent.js"></script>
 	<script type="text/javascript">
 		document.addEventListener('DOMContentLoaded', function() {
 			cookieconsent.run({
