--- a/about-me.html
+++ b/about-me.html
@@ -430,7 +430,7 @@
 	</script>
 
 	<!-- Cookie Consent -->
-	<script src="/js/cookie-consent.js"></script>
+	<script src="/jscookie-consent.js"></script>
 	<script type="text/javascript">
 		document.addEventListener('DOMContentLoaded', function() {
 			cookieconsent.run({
